enable prometheus endpoint on castor
Co-authored-by: Petra Scherer <scherer@synyx.de>
Co-authored-by: Timo Klenk <klenk@synyx.de>
Signed-off-by: Johannes Graf <graf@synyx.de>

--- a/castor-service/src/main/resources/application.yml
+++ b/castor-service/src/main/resources/application.yml
@@ -12,6 +12,12 @@ server:
   servlet:
     context-path: /
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info,health,prometheus
+
 carbynestack:
   castor:
     serverHeartbeat: 0
